--- a/index.html
+++ b/index.html
@@ -24,30 +24,92 @@
 
 		<section class=Digitaal-magazine-MKBGW-02>
 			<div class="vidText" id="studentVidOne">
-			<p class="DINcondensed">STUDENT<br>
-			VIDEO 1</p>
+				<p class="DINcondensed">STUDENT<br>
+				VIDEO 1</p>
 			</div>
 			<div class="frame" id="frameTwo">
-				<iframe 
-					width="964" 
-					height="544" 
-					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0" 
-					frameborder="0" 
+				<iframe
+					width="964"
+					height="544"
+					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
+					frameborder="0"
 					allowfullscreen>
 				</iframe>
 			</div>
+
+			<svg id="test" viewBox="0 0 100 86.6" fill="#F69A11">
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+					</g>
+				</g>
+			</svg>
+
+			<svg id="stripe1" fill="#FFFFFF">
+				  <rect height="80" width="10"/>
+
+			</svg>
+
+			<svg id="stripe2" fill="#FFFFFF">
+					<rect height="5" width="100%"/>
+
+			</svg>
+
+
+			<svg id="test2" viewBox="0 0 100 86.6" fill="#F69A11">
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+					</g>
+				</g>
+			</svg>
+
 		</section>
 
 		<section class=Digitaal-magazine-MKBGW-03>
+			<div class="vidText" id="studentVidTwo">
+				<p class="DINcondensed">STUDENT<br>
+				VIDEO 2</p>
+			</div>
+
 			<div class="frame" id="frameThree">
-				<iframe 
-					width="964" 
-					height="544" 
-					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0" 
-					frameborder="0" 
+				<iframe
+					width="964"
+					height="544"
+					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
+					frameborder="0"
 					allowfullscreen>
 				</iframe>
-			</div>			
+			</div>
+
+
+
+					<svg id="test3" viewBox="0 0 100 86.6" fill="#FEF7EF">
+						<g id="Layer_2" data-name="Layer 2">
+							<g id="Objects">
+								<polygon class="cls-1"  points="100 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+							</g>
+						</g>
+					</svg>
+
+					<svg id="stripe3" fill="#F69A11">
+						  <rect height="80" width="10"/>
+
+					</svg>
+
+					<svg id="stripe4" fill="#F69A11">
+							<rect height="5" width="100%"/>
+
+					</svg>
+
+					<svg id="test4" viewBox="0 0 100 86.6" fill="#FEF7EF">
+						<g id="Layer_2" data-name="Layer 2">
+							<g id="Objects">
+								<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+							</g>
+						</g>
+					</svg>
+
 		</section>
 
 		<section class=Digitaal-magazine-MKBGW-04>
@@ -55,26 +117,97 @@
 		</section>
 
 		<section class=Digitaal-magazine-MKBGW-05>
+
+			<div class="vidText" id="studentVidOne">
+				<p class="DINcondensed">STUDENT<br>
+				VIDEO 3</p>
+			</div>
+
+			<svg id="test" viewBox="0 0 100 86.6" fill="#4ABEB5">
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+					</g>
+				</g>
+			</svg>
+
+			<svg id="test5" viewBox="0 0 100 86.6" fill="#4ABEB5">
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+					</g>
+				</g>
+			</svg>
+
+
 			<div class="frame" id="frameFive">
-				<iframe 
-					width="964" 
-					height="544" 
-					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0" 
-					frameborder="0" 
+				<iframe
+					width="964"
+					height="544"
+					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
+					frameborder="0"
 					allowfullscreen>
 				</iframe>
 			</div>
+
+			<svg id="stripe1" fill="#FFFFFF">
+					<rect height="80" width="10"/>
+
+			</svg>
+
+			<svg id="stripe2" fill="#FFFFFF">
+					<rect height="5" width="100%"/>
+
+			</svg>
+
+
+
 		</section>
 
 		<section class=Digitaal-magazine-MKBGW-06>
-			<div class="frame" id="frameSix">
-				<iframe 
-					width="964" 
-					height="544" 
-					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0" 
-					frameborder="0" 
+
+			<div class="vidText" id="studentVidTwo">
+				<p class="DINcondensed">STUDENT<br>
+				VIDEO 4</p>
+			</div>
+
+			<div class="frame" id="frameThree">
+				<iframe
+					width="964"
+					height="544"
+					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
+					frameborder="0"
 					allowfullscreen>
 				</iframe>
+			</div>
+
+
+
+					<svg id="test3" viewBox="0 0 100 86.6" fill="#FEF7EF">
+						<g id="Layer_2" data-name="Layer 2">
+							<g id="Objects">
+								<polygon class="cls-1"  points="100 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+							</g>
+						</g>
+					</svg>
+
+					<svg id="stripe3" fill="#F69A11">
+							<rect height="80" width="10"/>
+
+					</svg>
+
+					<svg id="stripe4" fill="#F69A11">
+							<rect height="5" width="100%"/>
+
+					</svg>
+
+					<svg id="test4" viewBox="0 0 100 86.6" fill="#FEF7EF">
+						<g id="Layer_2" data-name="Layer 2">
+							<g id="Objects">
+								<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+							</g>
+						</g>
+					</svg>
 			</div>
 		</section>
 
@@ -83,43 +216,144 @@
 		</section>
 
 		<section class=Digitaal-magazine-MKBGW-08>
-			<div class="frame" id="frameEight">
-				<iframe 
-					width="964" 
-					height="544" 
-					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0" 
-					frameborder="0" 
+			<div class="vidText" id="studentVidOne">
+				<p class="DINcondensed">STUDENT<br>
+				VIDEO 5</p>
+			</div>
+			<div class="frame" id="frameTwo">
+				<iframe
+					width="964"
+					height="544"
+					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
+					frameborder="0"
 					allowfullscreen>
+				</iframe>
+			</div>
+
+			<svg id="test" viewBox="0 0 100 86.6" fill="#F69A11">
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+					</g>
+				</g>
+			</svg>
+
+			<svg id="stripe1" fill="#FFFFFF">
+					<rect height="80" width="10"/>
+
+			</svg>
+
+			<svg id="stripe2" fill="#FFFFFF">
+					<rect height="5" width="100%"/>
+
+			</svg>
+
+
+			<svg id="test2" viewBox="0 0 100 86.6" fill="#F69A11">
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+					</g>
+				</g>
+			</svg>
+>
 				</iframe>
 			</div>
 		</section>
 
 		<section class=Digitaal-magazine-MKBGW-09>
-			<div class="frame" id="frameNine">
-				<iframe 
-					width="964" 
-					height="544" 
-					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0" 
-					frameborder="0" 
-					allowfullscreen>
-				</iframe>
-			</div>
-		</section>
+				<div class="vidText" id="studentVidTwo">
+					<p class="DINcondensed">STUDENT<br>
+					VIDEO 6</p>
+				</div>
+
+				<div class="frame" id="frameThree">
+					<iframe
+						width="964"
+						height="544"
+						src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
+						frameborder="0"
+						allowfullscreen>
+					</iframe>
+				</div>
+
+
+
+						<svg id="test3" viewBox="0 0 100 86.6" fill="#F2FBFA">
+							<g id="Layer_2" data-name="Layer 2">
+								<g id="Objects">
+									<polygon class="cls-1"  points="100 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+								</g>
+							</g>
+						</svg>
+
+						<svg id="stripe3" fill="#23B3A9">
+								<rect height="80" width="10"/>
+
+						</svg>
+
+						<svg id="stripe4" fill="#23B3A9">
+								<rect height="5" width="100%"/>
+
+						</svg>
+
+						<svg id="test4" viewBox="0 0 100 86.6" fill="#F2FBFA">
+							<g id="Layer_2" data-name="Layer 2">
+								<g id="Objects">
+									<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+								</g>
+							</g>
+						</svg>
+				</div>
+			</section>
 
 		<section class=Digitaal-magazine-MKBGW-10>
 
 		</section>
 
 		<section class=Digitaal-magazine-MKBGW-11>
-			<div class="frame" id="frameEleven">
-				<iframe 
-					width="964" 
-					height="544" 
-					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0" 
-					frameborder="0" 
+			<div class="vidText" id="studentVidOne">
+				<p class="DINcondensed">STUDENT<br>
+				VIDEO 7</p>
+			</div>
+
+			<svg id="test" viewBox="0 0 100 86.6" fill="#4ABEB5">
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+					</g>
+				</g>
+			</svg>
+
+			<svg id="test5" viewBox="0 0 100 86.6" fill="#4ABEB5">
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+					</g>
+				</g>
+			</svg>
+
+
+			<div class="frame" id="frameFive">
+				<iframe
+					width="964"
+					height="544"
+					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
+					frameborder="0"
 					allowfullscreen>
 				</iframe>
 			</div>
+
+			<svg id="stripe1" fill="#FFFFFF">
+					<rect height="80" width="10"/>
+
+			</svg>
+
+			<svg id="stripe2" fill="#FFFFFF">
+					<rect height="5" width="100%"/>
+
+			</svg>
+
 		</section>
 
 		<script src="js/main.js" type="text/javascript"></script>
