scaling yt vids
.

--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
 				<p class="DINcondensed">STUDENT<br>
 				VIDEO 1</p>
 			</div>
-			<div class="frame" id="frameTwo">
+			<div class="frame">
+			<div class="video-container" id="frameTwo">
 				<iframe
-					width="964"
-					height="544"
+					width="640"
+					height="361"
 					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
 					frameborder="0"
 					allowfullscreen>
 				</iframe>
+			</div>
 			</div>
 
 			<svg id="test" viewBox="0 0 100 86.6" fill="#F69A11">
@@ -72,14 +74,16 @@
 				VIDEO 2</p>
 			</div>
 
-			<div class="frame" id="frameThree">
+			<div class="frame">
+			<div class="video-container" id="frameThree">
 				<iframe
-					width="964"
-					height="544"
+					width="640"
+					height="361"
 					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
 					frameborder="0"
 					allowfullscreen>
 				</iframe>
+			</div>
 			</div>
 
 
@@ -139,15 +143,16 @@
 				</g>
 			</svg>
 
-
-			<div class="frame" id="frameFive">
+			<div class="frame">
+			<div class="video-container" id="frameFive">
 				<iframe
-					width="964"
-					height="544"
+					width="640"
+					height="361"
 					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
 					frameborder="0"
 					allowfullscreen>
 				</iframe>
+			</div>
 			</div>
 
 			<svg id="stripe1" fill="#FFFFFF">
@@ -171,16 +176,17 @@
 				VIDEO 4</p>
 			</div>
 
-			<div class="frame" id="frameThree">
+			<div class="frame">
+			<div class="video-container" id="frameThree">
 				<iframe
-					width="964"
-					height="544"
+					width="640"
+					height="361"
 					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
 					frameborder="0"
 					allowfullscreen>
 				</iframe>
 			</div>
-
+			</div>
 
 
 					<svg id="test3" viewBox="0 0 100 86.6" fill="#FEF7EF">
@@ -220,14 +226,16 @@
 				<p class="DINcondensed">STUDENT<br>
 				VIDEO 5</p>
 			</div>
-			<div class="frame" id="frameTwo">
+			<div class="frame">
+			<div class="video-container" id="frameTwo">
 				<iframe
-					width="964"
-					height="544"
+					width="640"
+					height="361"
 					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
 					frameborder="0"
 					allowfullscreen>
 				</iframe>
+			</div>
 			</div>
 
 			<svg id="test" viewBox="0 0 100 86.6" fill="#F69A11">
@@ -267,17 +275,17 @@
 					VIDEO 6</p>
 				</div>
 
-				<div class="frame" id="frameThree">
+				<div class="frame">
+				<div class="video-container" id="frameThree">
 					<iframe
-						width="964"
-						height="544"
+						width="640"
+						height="361"
 						src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
 						frameborder="0"
 						allowfullscreen>
 					</iframe>
 				</div>
-
-
+				</div>
 
 						<svg id="test3" viewBox="0 0 100 86.6" fill="#F2FBFA">
 							<g id="Layer_2" data-name="Layer 2">
@@ -333,15 +341,16 @@
 				</g>
 			</svg>
 
-
-			<div class="frame" id="frameFive">
+			<div class="frame">
+			<div class="video-container" id="frameFive">
 				<iframe
-					width="964"
-					height="544"
+					width="640"
+					height="361"
 					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
 					frameborder="0"
 					allowfullscreen>
 				</iframe>
+			</div>
 			</div>
 
 			<svg id="stripe1" fill="#FFFFFF">
