--- a/index.html
+++ b/index.html
@@ -21,4 +21,51 @@
 			</div>
 		</section>
 
+		<section class=Digitaal-magazine-MKBGW-02>
+			<div class="vidText" id="studentVidOne">
+				<p class="DINcondensed">STUDENT<br>
+				VIDEO 1</p>
+			</div>
+
+			<div class="frame">
+			<div class="video-container" id="frameTwo">
+				<iframe
+					width="964"
+					height="544"
+					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
+					frameborder="0"
+					allowfullscreen>
+				</iframe>
+			</div>
+			</div>
+
+			<svg id="hex1" viewBox="0 0 100 86.6" fill="#F69A11">
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+					</g>
+				</g>
+			</svg>
+
+			<svg id="stripe1" fill="#FFFFFF">
+				<rect height="80" width="10"/>
+			</svg>
+			<svg id="stripe2" fill="#FFFFFF">
+				<rect height="5" width="100%"/>
+			</svg>
+
+			<svg id="hex2" viewBox="0 0 100 86.6" fill="#F69A11">
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+					</g>
+				</g>
+			</svg>
+
+		</section>
+
 	
+		<script src="js/main.js" type="text/javascript"></script>
+
+	</body>
+</html>
