--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
 			</div>
 			</div>
 
+			<div id="textTwo">
+			<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en <br>
+			de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten <br>
+			uit de video. Tijdens de video wordt gevraagd om een score te geven. <br>
+			Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5. Na het geven van de <br>
+			score wordt in de video een uitleg gegeven.</p>
+			</div>
+
 			<svg id="hex1" viewBox="0 0 100 86.6" fill="#F69A11">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
