--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</div>
 			</div>
 
-			<div id="textTwo">
+			<div class="vidInfo" id="textTwo">
 			<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en <br>
 			de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten <br>
 			uit de video. Tijdens de video wordt gevraagd om een score te geven. <br>
