--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 				</g>
 			</svg>
 
+			<div class="tips">
+			<p class="DINcondensed">Tip 1 Tip 2 Tip 3 Tip 4</p>
+
+
+			</div>
+
 		</section>
 
 	
