--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
 			<div class="frame">
 			<div class="video-container" id="frameTwo">
-				<iframe
-					width="964"
-					height="544"
-					src="https://www.youtube.com/embed/IweKi_0C58g?rel=0&amp;controls=0&amp;showinfo=0"
-					frameborder="0"
+				<iframe 
+					width="1280" 
+					height="720" 
+					src="https://www.youtube.com/embed/3-7qJBIFXl4?rel=0&amp;controls=0&amp;showinfo=0" 
+					frameborder="0" 
 					allowfullscreen>
 				</iframe>
 			</div>
