Nu jij weer is wat :+1:
Bowlen

--- a/index.html
+++ b/index.html
@@ -70,10 +70,27 @@
 				</g>
 			</svg>
 
-			<div class="tips">
-			<p class="DINcondensed">Tip 1 Tip 2 Tip 3 Tip 4</p>
+			<div class="tip1">
+			<p class="DINcondensed">Tip 1</p>
+			<p class="tip1text">Eet regelmatig en gezond.</p>
+			</div>
 
+			<div class="tip2">
+			<p class="DINcondensed">Tip 2</p>
+			<p class="tip2text">Neem de tijd om tijdens het werk te herstellen. 
+								Op lange termijn zorgt dit voor betere werk- prestaties.</p>
+			</div>
 
+			<div class="tip3">
+			<p class="DINcondensed">Tip 3</p>
+			<p class="tip3text">Zorg voor regel- maat.
+								Hou vaste tijden aan voor het naar bed gaan en het opstaan.</p>
+			</div>
+
+			<div class="tip4">
+			<p class="DINcondensed">Tip 4</p>
+			<p class="tip4text">Beweeg en sport regelmatig. 
+								Het wordt aanbevolen om ten minste 30 minuten per da te bewegen.</p>
 			</div>
 
 		</section>
