--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
 			<div class="frame">
 			<div class="video-container" id="frameTwo">
-				<iframe 
-					width="1280" 
-					height="720" 
-					src="https://www.youtube.com/embed/3-7qJBIFXl4?rel=0&amp;controls=0&amp;showinfo=0" 
-					frameborder="0" 
+				<iframe
+					width="1280"
+					height="720"
+					src="https://www.youtube.com/embed/3-7qJBIFXl4?rel=0&amp;controls=0&amp;showinfo=0"
+					frameborder="0"
 					allowfullscreen>
 				</iframe>
 			</div>
@@ -43,7 +43,7 @@
 			<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en <br>
 			de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten <br>
 			uit de video. Tijdens de video wordt gevraagd om een score te geven. <br>
-			Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5. Na het geven van de <br>
+			Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5.. Na het geven van de <br>
 			score wordt in de video een uitleg gegeven.</p>
 			</div>
 
@@ -77,7 +77,7 @@
 
 			<div class="tip2">
 			<p class="DINcondensed">Tip 2</p>
-			<p class="tip2text">Neem de tijd om tijdens het werk te herstellen. 
+			<p class="tip2text">Neem de tijd om tijdens het werk te herstellen.
 								Op lange termijn zorgt dit voor betere werk- prestaties.</p>
 			</div>
 
@@ -89,13 +89,13 @@
 
 			<div class="tip4">
 			<p class="DINcondensed">Tip 4</p>
-			<p class="tip4text">Beweeg en sport regelmatig. 
+			<p class="tip4text">Beweeg en sport regelmatig.
 								Het wordt aanbevolen om ten minste 30 minuten per da te bewegen.</p>
 			</div>
 
 		</section>
 
-	
+
 		<script src="js/main.js" type="text/javascript"></script>
 
 	</body>
