--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 			<svg id="stripe1" fill="#FFFFFF">
 				<rect height="80" width="10"/>
 			</svg>
+
+			<div id="tipsP1">
+
 			<svg id="stripe2" fill="#FFFFFF">
 				<rect height="5" width="100%"/>
 			</svg>
@@ -77,7 +80,7 @@
 
 			<div class="tip2">
 			<p class="DINcondensed">Tip 2</p>
-			<p class="tip2text">Neem de tijd om tijdens het werk te herstellen.
+			<p class="tip2text">Neem de tijd om tijdens het werk te herstellen.<br>
 								Op lange termijn zorgt dit voor betere werk- prestaties.</p>
 			</div>
 
@@ -89,8 +92,10 @@
 
 			<div class="tip4">
 			<p class="DINcondensed">Tip 4</p>
-			<p class="tip4text">Beweeg en sport regelmatig.
+			<p class="tip4text">Beweeg en sport regelmatig.<br>
 								Het wordt aanbevolen om ten minste 30 minuten per da te bewegen.</p>
+			</div>
+
 			</div>
 
 		</section>
