--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Digitaal magazine MKBGW</title>
-		
+
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 		<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -81,12 +81,12 @@
 			<div class="tip2">
 			<p class="DINcondensed">Tip 2</p>
 			<p class="tip2text">Neem de tijd om tijdens het werk te herstellen.<br>
-								Op lange termijn zorgt dit voor betere werk- prestaties.</p>
+								Op lange termijn zorgt dit voor betere werkprestaties.</p>
 			</div>
 
 			<div class="tip3">
 			<p class="DINcondensed">Tip 3</p>
-			<p class="tip3text">Zorg voor regel- maat.
+			<p class="tip3text">Zorg voor regelmaat.
 								Hou vaste tijden aan voor het naar bed gaan en het opstaan.</p>
 			</div>
 
