--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<rect height="80" width="10"/>
 			</svg>
 
-			<div id="tipsP1">
+			<!-- Hieronder -->
 
 			<svg id="stripe2" fill="#FFFFFF">
 				<rect height="5" width="100%"/>
