--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			<svg id="stripe1" fill="#FFFFFF">
 				<rect height="80" width="10"/>
 			</svg>
-			
-			<div class="vidText" id="studentVidOne">
+
+			<div id="studentVidOne">
 				<p class="DINcondensed">STUDENT<br>
 				VIDEO 1</p>
 			</div>
