--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main2.css">
 
 		<script src="https://use.typekit.net/xkl5uik.js"></script>
 		<script>try{Typekit.load({ async: true });}catch(e){}</script>
