--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 				</g>
 			</svg>
 
+			<!-- Try smth with this -->
+			<svg width="10" height="80" viewBox="0 0 1 8" >
+   				 <rect x="10" y="20" width="10" height="80"
+          			style="stroke: #000000; fill:white;"/>
+			</svg>
+
 			<svg id="stripe1" fill="#FFFFFF">
 				<rect height="80" width="10"/>
 			</svg>
