--- a/index.html
+++ b/index.html
@@ -32,14 +32,19 @@
 			</svg>
 
 			<!-- Try smth with this -->
-			<svg width="10" height="80" viewBox="0 0 1 8" >
-   				 <rect x="10" y="20" width="10" height="80"
-          			style="stroke: #000000; fill:white;"/>
-			</svg>
+			<<svg id="view" height="67" width="10" fill="pink" viewBox="10 510 8" >
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="10 0 0 0 0 0 0 0 0 80 100 30 10 0"/>
+					</g>
+				</g>
+   				<!-- <rect x="0" y="2" width="10" height="80"
+          			style="stroke: pink; fill:pink; "/>
+			</svg> -->
 
-			<svg id="stripe1" fill="#FFFFFF">
+			<!--<svg id="stripe1" fill="#FFFFFF">
 				<rect height="80" width="10"/>
-			</svg>
+			</svg> -->
 
 			<div id="studentVidOne">
 				<p class="DINcondensed">STUDENT<br>
