--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 					</g>
 				</g>
 			</svg>
-
-			<!-- Try smth with this -->
-			<<svg id="view" height="67" width="10" fill="pink" viewBox="10 510 8" >
+			
+			<svg id="view" height="67" width="10" fill="#FFFFFF" viewBox="10 510 8" >
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="10 0 0 0 0 0 0 0 0 80 100 30 10 0"/>
