--- a/index.html
+++ b/index.html
@@ -30,13 +30,7 @@
 					</g>
 				</g>
 			</svg>
-			
-			<svg id="view" height="67" width="10" fill="#FFFFFF" viewBox="10 510 8" >
-				<g id="Layer_2" data-name="Layer 2">
-					<g id="Objects">
-						<polygon class="cls-1" points="10 0 0 0 0 0 0 0 0 80 100 30 10 0"/>
-					</g>
-				</g>
+
    				<!-- <rect x="0" y="2" width="10" height="80"
           			style="stroke: pink; fill:pink; "/>
 			</svg> -->
@@ -46,7 +40,7 @@
 			</svg> -->
 
 			<div id="studentVidOne">
-				<p class="DINcondensed">STUDENT<br>
+				<p class="borderleft DINcondensed">STUDENT<br>
 				VIDEO 1</p>
 			</div>
 
