--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<section class=Digitaal-magazine-MKBGW-02>
 
-			<svg id="hex1" viewBox="0 0 100 86.6" fill="#F69A11">
+			<svg id="hex1" viewBox="0 0 100 86.6" fill="#FFF">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
