--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
 			</div>
 
 			<div id="textTwo">
-			<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en <br>
-			de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten <br>
-			uit de video. Tijdens de video wordt gevraagd om een score te geven. <br>
-			Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5.. Na het geven van de <br>
-			score wordt in de video een uitleg gegeven.</p>
+			<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten uit de video. Tijdens de video wordt gevraagd om een score te geven. Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5.. Na het geven van de score wordt in de video een uitleg gegeven.</p>
 			</div>
 
 		<script src="js/main.js" type="text/javascript"></script>
