--- a/index.html
+++ b/index.html
@@ -60,6 +60,45 @@
 			<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten uit de video. Tijdens de video wordt gevraagd om een score te geven. Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5.. Na het geven van de score wordt in de video een uitleg gegeven.</p>
 			</div>
 
+			<svg id="stripe2" fill="#FFFFFF">
+				<rect height="5" width="100%"/>
+			</svg>
+
+			<svg id="hex2" viewBox="0 0 100 86.6" fill="#F69A11">
+				<g id="Layer_2" data-name="Layer 2">
+					<g id="Objects">
+						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
+					</g>
+				</g>
+			</svg>
+
+			<div class="tip1">
+			<p class="DINcondensed">Tip 1</p>
+			<p class="tip1text">Eet regelmatig en gezond.</p>
+			</div>
+
+			<div class="tip2">
+			<p class="DINcondensed">Tip 2</p>
+			<p class="tip2text">Neem de tijd om tijdens het werk te herstellen.<br>
+								Op lange termijn zorgt dit voor betere werkprestaties.</p>
+			</div>
+
+			<div class="tip3">
+			<p class="DINcondensed">Tip 3</p>
+			<p class="tip3text">Zorg voor regelmaat.
+								Hou vaste tijden aan voor het naar bed gaan en het opstaan.</p>
+			</div>
+
+			<div class="tip4">
+			<p class="DINcondensed">Tip 4</p>
+			<p class="tip4text">Beweeg en sport regelmatig.<br>
+								Het wordt aanbevolen om ten minste 30 minuten per da te bewegen.</p>
+			</div>
+
+			</div>
+
+		</section>
+
 		<script src="js/main.js" type="text/javascript"></script>
 
 	</body>
