--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				</div>
 
 				<div class="frame">
-				<div class="video-container" id="frameTwo">
+				<div class="video-container" class="borderOrange" id="frameTwo">
 					<iframe
 						width="1280"
 						height="720"
