--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 		<section class=Digitaal-magazine-MKBGW-02>
 
-			<svg id="hex1" viewBox="0 0 100 86.6" fill="#FFF">
+			<svg class="hex1" viewBox="0 0 100 86.6" fill="#FFF">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -54,7 +54,7 @@
 				</g>
 			</svg>
 
-			<div id="studentVidOne">
+			<div class="studentVidWhite">
 				<p class="borderleft DINcondensed">STUDENT<br>
 				VIDEO 1</p>
 			</div>
@@ -71,15 +71,15 @@
 				</div>
 			</div>
 
-			<div id="textTwo">
+			<div class="textWhite">
 				<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten uit de video. Tijdens de video wordt gevraagd om een score te geven. Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5.. Na het geven van de score wordt in de video een uitleg gegeven.</p>
 			</div>
 
-			<svg id="stripe1" fill="#FFFFFF">
+			<svg class="stripe1" fill="#FFFFFF">
 				<rect height="5" width="100%"/>
 			</svg>
 
-			<svg id="hex2" viewBox="0 0 100 86.6" fill="#FFF">
+			<svg class="hex2" viewBox="0 0 100 86.6" fill="#FFF">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -118,7 +118,7 @@
 
 		<section class="Digitaal-magazine-MKBGW-03">
 
-			<svg id="hex3" viewBox="0 0 100 86.6" fill="#F28D01">
+			<svg class="hex3" viewBox="0 0 100 86.6" fill="#F28D01">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -126,7 +126,7 @@
 				</g>
 			</svg>
 
-			<div id="studentVidTwo">
+			<div class="studentVidBlack">
 				<p class="borderleft2 DINcondensed">STUDENT<br>
 													VIDEO 2</p>
 			</div>
@@ -143,11 +143,11 @@
 				</div>
 			</div>
 
-			<div id="textThree">
+			<div class="textBlack">
 				<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten uit de video. Tijdens de video wordt gevraagd om een score te geven. Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5.. Na het geven van de score wordt in de video een uitleg gegeven.</p>
 			</div>
 
-			<svg id="hex4" viewBox="0 0 100 86.6" fill="#F28D01">
+			<svg class="hex4" viewBox="0 0 100 86.6" fill="#F28D01">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -155,7 +155,7 @@
 				</g>
 			</svg>
 
-			<svg id="stripe2" fill="#F28D01">
+			<svg class="stripe2" fill="#F28D01">
 				<rect height="5" width="100%"/>
 			</svg>
 
@@ -197,7 +197,7 @@
 	#######################-->	
 		<section class=Digitaal-magazine-MKBGW-05>
 
-			<svg id="hex5" viewBox="0 0 100 86.6" fill="#FFF">
+			<svg class="hex1" viewBox="0 0 100 86.6" fill="#FFF">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -205,7 +205,7 @@
 				</g>
 			</svg>
 
-			<div id="studentVidOne">
+			<div class="studentVidWhite">
 				<p class="borderleft DINcondensed">STUDENT<br>
 												   VIDEO 3</p>
 			</div>
@@ -222,15 +222,15 @@
 				</div>
 			</div>
 
-			<div id="textTwo">
+			<div class="textWhite">
 				<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten uit de video. Tijdens de video wordt gevraagd om een score te geven. Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5.. Na het geven van de score wordt in de video een uitleg gegeven.</p>
 			</div>
 
-			<svg id="stripe1" fill="#FFFFFF">
+			<svg class="stripe1" fill="#FFFFFF">
 				<rect height="5" width="100%"/>
 			</svg>
 
-			<svg id="hex6" viewBox="0 0 100 86.6" fill="#FFF">
+			<svg class="hex2" viewBox="0 0 100 86.6" fill="#FFF">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -269,7 +269,7 @@
 
 		<section class="Digitaal-magazine-MKBGW-06">
 
-			<svg id="hex3" viewBox="0 0 100 86.6" fill="#F28D01">
+			<svg class="hex3" viewBox="0 0 100 86.6" fill="#F28D01">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -277,7 +277,7 @@
 				</g>
 			</svg>
 
-			<div id="studentVidTwo">
+			<div class="studentVidBlack">
 				<p class="borderleft2 DINcondensed">STUDENT<br>
 													VIDEO 4</p>
 			</div>
@@ -294,11 +294,11 @@
 				</div>
 			</div>
 
-			<div id="textThree">
+			<div class="textBlack">
 				<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten uit de video. Tijdens de video wordt gevraagd om een score te geven. Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5.. Na het geven van de score wordt in de video een uitleg gegeven.</p>
 			</div>
 
-			<svg id="hex4" viewBox="0 0 100 86.6" fill="#F28D01">
+			<svg class="hex4" viewBox="0 0 100 86.6" fill="#F28D01">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -306,7 +306,7 @@
 				</g>
 			</svg>
 
-			<svg id="stripe2" fill="#F28D01">
+			<svg class="stripe2" fill="#F28D01">
 				<rect height="5" width="100%"/>
 			</svg>
 
@@ -349,7 +349,7 @@
 
 		<section class=Digitaal-magazine-MKBGW-08>
 
-			<svg id="hex1" viewBox="0 0 100 86.6" fill="#FFF">
+			<svg class="hex1" viewBox="0 0 100 86.6" fill="#FFF">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -357,7 +357,7 @@
 				</g>
 			</svg>
 
-			<div id="studentVidOne">
+			<div class="studentVidWhite">
 				<p class="borderleft DINcondensed">STUDENT<br>
 												   VIDEO 5</p>
 			</div>
@@ -374,15 +374,15 @@
 				</div>
 			</div>
 
-			<div id="textTwo">
+			<div class="textWhite">
 				<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten uit de video. Tijdens de video wordt gevraagd om een score te geven. Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5.. Na het geven van de score wordt in de video een uitleg gegeven.</p>
 			</div>
 
-			<svg id="stripe1" fill="#FFFFFF">
+			<svg class="stripe1" fill="#FFFFFF">
 				<rect height="5" width="100%"/>
 			</svg>
 
-			<svg id="hex2" viewBox="0 0 100 86.6" fill="#FFF">
+			<svg class="hex2" viewBox="0 0 100 86.6" fill="#FFF">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -421,7 +421,7 @@
 
 		<section class="Digitaal-magazine-MKBGW-09">
 
-			<svg id="hex3" viewBox="0 0 100 86.6" fill="#23B3A9">
+			<svg class="hex3" viewBox="0 0 100 86.6" fill="#23B3A9">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -429,7 +429,7 @@
 				</g>
 			</svg>
 
-			<div id="studentVidTwo">
+			<div class="studentVidBlack">
 				<p class="borderleft3 DINcondensed">STUDENT<br>
 												    VIDEO 6</p>
 			</div>
@@ -446,11 +446,11 @@
 				</div>
 			</div>
 
-			<div id="textThree">
+			<div class="textBlack">
 				<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten uit de video. Tijdens de video wordt gevraagd om een score te geven. Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5.. Na het geven van de score wordt in de video een uitleg gegeven.</p>
 			</div>
 
-			<svg id="hex4" viewBox="0 0 100 86.6" fill="#23B3A9">
+			<svg class="hex4" viewBox="0 0 100 86.6" fill="#23B3A9">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -458,7 +458,7 @@
 				</g>
 			</svg>
 
-			<svg id="stripe2" fill="#23B3A9">
+			<svg class="stripe2" fill="#23B3A9">
 				<rect height="5" width="100%"/>
 			</svg>
 
@@ -501,7 +501,7 @@
 
 		<section class=Digitaal-magazine-MKBGW-11>
 
-			<svg id="hex5" viewBox="0 0 100 86.6" fill="#FFF">
+			<svg class="hex1" viewBox="0 0 100 86.6" fill="#FFF">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
@@ -509,7 +509,7 @@
 				</g>
 			</svg>
 
-			<div id="studentVidOne">
+			<div class="studentVidWhite">
 				<p class="borderleft DINcondensed">STUDENT<br>
 												   VIDEO 7</p>
 			</div>
@@ -526,15 +526,15 @@
 				</div>
 			</div>
 
-			<div id="textTwo">
+			<div class="textWhite">
 				<p>In de video [Video1] wordt een stagegesprek tussen de begeleider en de stagiair gevoerd. Omgaan met kritiek is één van de vier aspecten uit de video. Tijdens de video wordt gevraagd om een score te geven. Er wordt gekozen tussen de scores 1, 2, 3, 4 of 5.. Na het geven van de score wordt in de video een uitleg gegeven.</p>
 			</div>
 
-			<svg id="stripe1" fill="#FFFFFF">
+			<svg class="stripe1" fill="#FFFFFF">
 				<rect height="5" width="100%"/>
 			</svg>
 
-			<svg id="hex6" viewBox="0 0 100 86.6" fill="#FFF">
+			<svg class="hex2" viewBox="0 0 100 86.6" fill="#FFF">
 				<g id="Layer_2" data-name="Layer 2">
 					<g id="Objects">
 						<polygon class="cls-1" points="75 0 25 0 0 43.3 25 86.6 75 86.6 100 43.3 75 0"/>
